--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name" : "tcgascraper",
   "version" : "0.0.1",
   "description" : "Scrapes the TCGA to RDF",
+  "author" : {
+    "name" : "David Robbins",
+    "email" : "robbins.david@gmail.com"
+  },
+  "licenses": [{
+      "type": "The Unlicense",
+      "url": "http://unlicense.org/"
+  }],
   "engines" : {
     "node" : "0.6.x",
     "npm" : "1.0.x"
