Added query parameter to SPARQLURL in the environment.

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 ROOT_URL=https://tcga-data.nci.nih.gov/tcgafiles/ftp_auth/distro_ftpusers/anonymous/tumor/
-SPARQLURL=http://steH0IJaugxU82NWXhHa@dydra.com/robbinsd/tcga/sparql
+SPARQLURL=http://steH0IJaugxU82NWXhHa@dydra.com/robbinsd/tcga/sparql?query=
