--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
       "url": "http://unlicense.org/"
   }],
   "engines" : {
-    "node" : "0.6.x",
-    "npm" : "1.0.x"
+    "node" : " >= 0.6.0 < 0.8.4",
+    "npm" : " >= 1.0.4 < 1.1.5"
   },
   "dependencies" : {
     "request" : "2.9.x",
