--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name" : "tcgascraper",
-  "version" : "0.0.1",
-  "description" : "Scrapes the TCGA to RDF",
-  "author" : {
-    "name" : "David Robbins",
-    "email" : "robbins.david@gmail.com"
+  "name": "tcgascraper",
+  "version": "2.0.0",
+  "description": "Scrapes the TCGA to MongoDB Documents",
+  "author": {
+    "name": "David Robbins",
+    "email": "robbins.david@gmail.com"
   },
-  "licenses": [{
+  "licenses": [
+    {
       "type": "The Unlicense",
       "url": "http://unlicense.org/"
-  }],
-  "engines" : {
-    "node" : "0.6.x",
-    "npm" : "1.0.x"
+    }
+  ],
+  "dependencies": {
+    "request": "2.9.x",
+    "node-pubsub": "0.1.0"
   },
-  "dependencies" : {
-    "request" : "2.9.x",
-    "node-pubsub" : "0.1.0"
+  "devDependencies": {
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-coffee": "~0.7.0",
+    "grunt": "~0.4.1",
+    "nodeunit": "~0.8.1",
+    "grunt-contrib-watch": "~0.5.1"
   }
 }
