--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
   ],
   "dependencies": {
     "request": "2.9.x",
-    "node-pubsub": "0.1.0"
+    "node-pubsub": "0.1.0",
+    "async": "~0.2.9",
+    "mongodb": "~1.3.17"
   },
   "devDependencies": {
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt": "~0.4.1",
     "nodeunit": "~0.8.1",
-    "grunt-contrib-watch": "~0.5.1"
+    "grunt-contrib-watch": "~0.5.1",
+    "source-map-support": "~0.2.1"
   }
 }
