--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "async": "^0.9.0",
     "request": "^2.49.0",
-    "coffee-script": "^1.8.0"
+    "coffee-script": "^1.8.0",
+    "cheerio": "^0.18.0"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5"
